# yet-another-rpg

./: .gitmodules  CMakeLists.txt  README.md
assets/scripts/scenes/lua/: game_scene.lua  intro_scene.lua
cmake/: buildtype.cmake  color.cmake  compiler.cmake  compiler_utility.cmake  coverage.cmake  directory.cmake  library.cmake  module.cmake  platform.cmake  source_group_utils.cmake  test_features.cmake  unit_tests.cmake
config/: sfml_config.json
src/: main.cpp  pch.cpp  pch.hpp
src/world/: rpg_world.cpp  rpg_world.hpp
